[package]
name = "img"
version = "0.1.0"
edition = "2021"
description = "random img server"
default-run = "img"
readme = "README.md"
authors = ["AzureQAQ <azureqaq@gmail.com>"]
license = "Apache-2.0"
keywords = ["cli", "bin"]
categories = ["command-line-utilities"]
build =  "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4"
anyhow = "1.0"
simple_logger = { version = "4.0", default-features = false, features = ["colors"] }
toml = { version = "0.6", default-features = false, features = ["parse"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.3.0"
rand = "0.8"
lazy_static = "1.4.0"


[dependencies.ahash]
version = "0.8"
default-features = false
features = ['serde', "std", "compile-time-rng"]

[dependencies.tokio]
version = "1.21"
default-features = false
features = [
    "rt-multi-thread", "macros", "parking_lot", "fs"
]

[dependencies.axum]
version = "0.6"
default-features = false
features = [
    "matched-path", "original-uri", "tokio", "http2"
]


[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio-test = "*"

[build-dependencies]
embed-resource =  "1"
